--- a/.dockerignore
+++ b/.dockerignore
@@ -1,61 +1,65 @@
+# Git
+.git
+.gitignore
+
 # Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
+__pycache__
+*.pyc
+*.pyo
+*.pyd
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual environments
-venv/
-env/
-ENV/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
+env
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git
+.mypy_cache
+.pytest_cache
+.hypothesis
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Git
-.git/
-.gitignore
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
 
-# Logs
-*.log
-
-# Temporary files
-*.tmp
-*.temp
-
-# Data files (will be created at runtime)
-data/
+# Project specific
 *.xlsx
 *.jpg
+*.jpeg
 *.png
-
-# Credentials (will be set via environment variables)
-google_sheets_credentials.json
+*.gif
+last_photo.jpg
+receipt_data_*.xlsx
 
 # Documentation
 README.md
+DEPLOY_README.md
+QUICK_DEPLOY.md
 *.md
 
+# Deployment
+deploy.ps1
+deploy.sh
+cloudbuild.yaml
+app.yaml
+
+# GitHub
+.github
