--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+# Стабильные версии для Python 3.11
 python-telegram-bot==20.7
 google-cloud-aiplatform==1.71.1
 vertexai==1.71.1
-numpy>=1.24.0,<2.0.0
-pandas>=2.0.0,<3.0.0
-openpyxl>=3.1.2
-google-auth>=2.23.4
-google-auth-oauthlib>=1.1.0
-google-auth-httplib2>=0.1.1
-google-api-python-client>=2.108.0
-fastapi>=0.104.1
-uvicorn[standard]>=0.24.0
-httpx>=0.25.2
+
+# Фиксированные версии numpy и pandas для совместимости
+numpy==1.24.3
+pandas==2.0.3
+
+# Остальные зависимости
+openpyxl==3.1.2
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.108.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+httpx==0.25.2
