--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,8 @@ jobs:
           --timeout 300 \
           --concurrency 80 \
           --set-env-vars "BOT_TOKEN=${{ secrets.BOT_TOKEN }}" \
+          --set-env-vars "POSTER_TOKEN=${{ secrets.POSTER_TOKEN }}" \
+          --set-env-vars "PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}" \
           --set-env-vars "WEBHOOK_URL=${{ secrets.WEBHOOK_URL }}" \
           --set-env-vars "GOOGLE_APPLICATION_CREDENTIALS=/app/google_sheets_credentials.json"
 
