--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,8 @@ jobs:
           --set-env-vars "POSTER_TOKEN=${{ secrets.POSTER_TOKEN }}" \
           --set-env-vars "PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}" \
           --set-env-vars "WEBHOOK_URL=${{ secrets.WEBHOOK_URL }}" \
-          --set-env-vars "GOOGLE_APPLICATION_CREDENTIALS=/app/google_sheets_credentials.json"
+          --set-env-vars "GOOGLE_APPLICATION_CREDENTIALS=/app/google_sheets_credentials.json" \
+          --set-env-vars "GOOGLE_APPLICATION_CREDENTIALS_JSON=${{ secrets.GCP_SA_KEY }}"
 
     - name: Get service URL
       run: |
