--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ openpyxl==3.1.2
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
+google-auth-oauth2==1.0.0
 google-api-python-client==2.108.0
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
