--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,9 @@ jobs:
     - name: Build and push Docker image
       run: |
         # Build the Docker image with credentials
+        echo "Building with credentials..."
         docker build \
-          --build-arg GOOGLE_APPLICATION_CREDENTIALS_JSON="${{ secrets.GCP_SA_KEY }}" \
+          --build-arg GOOGLE_APPLICATION_CREDENTIALS_JSON='${{ secrets.GCP_SA_KEY }}' \
           -t gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA .
         
         # Push the image to Google Container Registry
