--- a/requirements_local.txt
+++ b/requirements_local.txt
@@ -14,6 +14,7 @@ google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
+google-cloud-firestore==2.13.1
 
 # Для локальной разработки (не нужны для production)
 python-dotenv==1.0.0
