--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
       - '--image'
       - 'gcr.io/$PROJECT_ID/ai-bot:latest'
       - '--region'
-      - 'asia-southeast1'
+      - 'europe-west1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
@@ -34,7 +34,7 @@ steps:
       - '--timeout'
       - '300'
       - '--set-env-vars'
-      - 'BOT_TOKEN=${_BOT_TOKEN},POSTER_TOKEN=${_POSTER_TOKEN},PROJECT_ID=${_PROJECT_ID},WEBHOOK_URL=https://ai-bot-${_PROJECT_ID}.asia-southeast1.run.app'
+      - 'BOT_TOKEN=${_BOT_TOKEN},POSTER_TOKEN=${_POSTER_TOKEN},PROJECT_ID=${_PROJECT_ID}'
 
 # Переменные для подстановки
 substitutions:
