Ассинхронно зашло в бота но не работает

--- a/requirements_local.txt
+++ b/requirements_local.txt
@@ -16,5 +16,13 @@ google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 google-cloud-firestore==2.13.1
 
+# Асинхронные библиотеки для поддержки async/await
+httpx==0.25.2  # Асинхронные HTTP-запросы к Vertex AI и другим API (совместимо с python-telegram-bot)
+aiofiles==23.2.1  # Асинхронные файловые операции для работы с файлами без блокировки
+anyio==3.7.1  # Асинхронная совместимость для httpx и других библиотек (совместимо с fastapi)
+
+# Дополнительные асинхронные зависимости (опционально)
+# asyncio-mqtt==0.16.1  # Асинхронный MQTT-клиент (раскомментировать если используется MQTT)
+
 # Для локальной разработки (не нужны для production)
 python-dotenv==1.0.0
