Fix Google Sheets configuration in cloud version
- Add missing AWAITING_SHEET_URL and AWAITING_SHEET_NAME states to main.py
- Fix circular reference in cloudbuild.yaml for GOOGLE_APPLICATION_CREDENTIALS_JSON
- Cloud version should now properly use GitHub secret instead of local file

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -41,7 +41,7 @@ substitutions:
   _BOT_TOKEN: '8291213805:AAEHDlkDCHLQ3RFtrB5HLMeU-nGzF1hOZYE'
   _POSTER_TOKEN: '853931:71424838d41a70ee724e07ef6c6f0774'
   _PROJECT_ID: 'just-advice-470905-a3'
-  _GOOGLE_APPLICATION_CREDENTIALS_JSON: '${_GOOGLE_APPLICATION_CREDENTIALS_JSON}'
+  # _GOOGLE_APPLICATION_CREDENTIALS_JSON будет передана через GitHub Secrets
 
 # Опции сборки
 options:
