--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,12 +34,11 @@ steps:
       - '--timeout'
       - '300'
       - '--set-env-vars'
-      - 'BOT_TOKEN=${_BOT_TOKEN},POSTER_TOKEN=${_POSTER_TOKEN},PROJECT_ID=${_PROJECT_ID},GOOGLE_APPLICATION_CREDENTIALS_JSON=${_GOOGLE_APPLICATION_CREDENTIALS_JSON}'
+      - 'BOT_TOKEN=${_BOT_TOKEN},PROJECT_ID=${_PROJECT_ID},GOOGLE_APPLICATION_CREDENTIALS_JSON=${_GOOGLE_APPLICATION_CREDENTIALS_JSON}'
 
 # Переменные для подстановки
 substitutions:
   _BOT_TOKEN: '8291213805:AAEHDlkDCHLQ3RFtrB5HLMeU-nGzF1hOZYE'
-  _POSTER_TOKEN: '853931:71424838d41a70ee724e07ef6c6f0774'
   _PROJECT_ID: 'just-advice-470905-a3'
   # _GOOGLE_APPLICATION_CREDENTIALS_JSON будет передана через GitHub Secrets
 
