--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ google-generativeai==0.8.3
 numpy==1.24.3
 pandas==2.0.3
 
+# Computer Vision библиотеки
+opencv-python-headless==4.8.1.78
+
 # Остальные зависимости
 openpyxl==3.1.2
 google-auth==2.23.4
