--- a/requirements_local.txt
+++ b/requirements_local.txt
@@ -8,6 +8,9 @@ vertexai==1.71.1
 numpy==1.24.3
 pandas==2.0.3
 
+# Computer Vision библиотеки
+opencv-python-headless==4.8.1.78
+
 # Остальные зависимости
 openpyxl==3.1.2
 google-auth==2.23.4
