--- a/env.example
+++ b/env.example
@@ -9,3 +9,7 @@ PROJECT_ID=your_project_id_here
 
 # Дополнительные настройки (опционально)
 # WEBHOOK_URL=https://your-webhook-url.com  # Не нужно для локальной разработки
+
+# Режим анализа Gemini (debug или production)
+# GEMINI_ANALYSIS_MODE=production  # По умолчанию production
+# GEMINI_ANALYSIS_MODE=debug       # Для отладки выбора модели
