--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,7 +34,7 @@ steps:
       - '--timeout'
       - '300'
       - '--set-env-vars'
-      - 'BOT_TOKEN=${_BOT_TOKEN},PROJECT_ID=${_PROJECT_ID},GOOGLE_APPLICATION_CREDENTIALS_JSON=${_GOOGLE_APPLICATION_CREDENTIALS_JSON},GOOGLE_SHEETS_CREDENTIALS_JSON=${_GOOGLE_SHEETS_CREDENTIALS_JSON},DEFAULT_MODEL=pro,GOOGLE_CLOUD_LOCATION=global'
+      - 'BOT_TOKEN=${_BOT_TOKEN},PROJECT_ID=${_PROJECT_ID},GOOGLE_APPLICATION_CREDENTIALS_JSON=${_GOOGLE_APPLICATION_CREDENTIALS_JSON},GOOGLE_SHEETS_CREDENTIALS_JSON=${_GOOGLE_SHEETS_CREDENTIALS_JSON},DEFAULT_MODEL=pro,GOOGLE_CLOUD_LOCATION=global,GEMINI_ANALYSIS_MODE=production'
       - '--service-account'
       - 'ai-bot-service-account@${_PROJECT_ID}.iam.gserviceaccount.com'
 
